fix the content sizing and spacing on about page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,9 +82,7 @@
 
 /* ABOUT PAGE CSS */ 
 
-<<<<<<< HEAD
-=======
- 
+
  
 * {
   box-sizing: border-box;
@@ -111,7 +109,7 @@
 }
 
 /* Container around content */
-.container {
+.containerTimeline {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
@@ -119,7 +117,7 @@
 }
  
 /* The circles on the timeline */
-.container::after {
+.containerTimeline::after {
 
  
   /* content: '';
@@ -135,17 +133,17 @@
 }
 
 /* Place the container to the left */
-.left {
+.leftTimeline {
   left: 0;
 }
 
 /* Place the container to the right */
-.right {
+.rightTimeline {
   left: 50%;
 }
 
 /* Add arrows to the left container (pointing right) */
-.left::before {
+.leftTimeline::before {
   content: " ";
   height: 0;
   position: absolute;
@@ -159,7 +157,7 @@
 }
 
 /* Add arrows to the right container (pointing left) */
-.right::before {
+.rightTimeline::before {
   content: " ";
   height: 0;
   position: absolute;
@@ -173,12 +171,12 @@
 }
 
 /* Fix the circle for containers on the right side */
-.right::after {
+.rightTimeline::after {
   left: -16px;
 }
 
 /* The actual content */
-.content {
+.contentTimeline {
   padding: 20px 30px;
   background-color: white;
   position: relative;
@@ -193,14 +191,14 @@
   }
   
   /* Full-width containers */
-  .container {
+  .containerTimeline {
   width: 100%;
   padding-left: 70px;
   padding-right: 25px;
   }
   
   /* Make sure that all arrows are pointing leftwards */
-  .container::before {
+  .containerTimeline::before {
   left: 60px;
   border: medium solid white;
   border-width: 10px 10px 10px 0;
@@ -208,16 +206,15 @@
   }
 
   /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
+  .leftTimeline::after, .rightTimeline::after {
   left: 15px;
   }
   
   /* Make all right containers behave like the left ones */
-  .right {
+  .rightTimeline {
   left: 0%;
   }
 }
->>>>>>> c1f4e0765e50581b8d244f8cf135f683a0e8ca6c
 
 
 
